--- a/style.css
+++ b/style.css
@@ -145,13 +145,18 @@ a.wowhead del {
 }
 
 #raid-menu button span {
-  position: absolute;
-  top: 50%; /* Position the text vertically in the center */
-  left: 50%; /* Position the text horizontally in the center */
-  transform: translate(-50%, -50%); /* This centers it perfectly */
-  color: white; /* Make sure the text is visible */
-  z-index: 1; /* Make sure the text appears on top of the image */
-  font-weight: bold; /* Optional: make the text stand out */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 1;
+    font-weight: bold;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
 
 .boss-icon {
