--- a/public/style.css
+++ b/public/style.css
@@ -388,7 +388,7 @@ a.wowhead del {
 
 .collapsible-content.active {
   max-height: 1000px; /* Adjust if your content is taller */
-  padding: 0 32px 32px 32px;
+  padding: 32px 32px 32px 32px;
 }
 
 /* =================================================================
@@ -983,4 +983,3 @@ button:focus,
 .rankings-gear-name.rare      { color: #0070dd; }
 .rankings-gear-name.epic      { color: #a335ee; }
 .rankings-gear-name.legendary { color: #ff8000; }
-
